--- a/Signal/translations/uk.lproj/InfoPlist.strings
+++ b/Signal/translations/uk.lproj/InfoPlist.strings
@@ -2,8 +2,8 @@ NSAppleMusicUsageDescription = "Signal використовує Apple Music дл
 NSCameraUsageDescription = "Signal використовує камеру для знімків та відеовикликів.";
 NSContactsUsageDescription = "Signal використовує ваші контакти, щоб знаходити знайомих вам користувачів. Ми не зберігаємо контакти на сервері.";
 NSFaceIDUsageDescription = "Блокувальник екрану Signal використовує Face ID.";
-NSLocationWhenInUseUsageDescription = "Signal потребує доступу до вашого розташування, щоб ви могли ним поділитися.";
-NSMicrophoneUsageDescription = "Signal потребує доступу до мікрофона для можливості викликів та запису голосових повідомлень.";
+NSLocationWhenInUseUsageDescription = "Signal потребує доступу до розташування, щоб ним поділитися.";
+NSMicrophoneUsageDescription = "Signal потребує доступу до мікрофона, щоб здійснювати й приймати виклики та записувати голосові повідомлення.";
 NSPhotoLibraryAddUsageDescription = "Signal зберігатиме фото до бібліотеки фотографій.";
-NSPhotoLibraryUsageDescription = "Signal дасть вам змогу вибрати фото для надсилання з бібліотеки.";
+NSPhotoLibraryUsageDescription = "Signal дасть вам змогу вибрати фото з бібліотеки, які ви хочете надіслати.";
 NSLocalNetworkUsageDescription = "Signal використовує локальну мережу для можливості перенесення вашого акаунту на новий телефон. Цей дозвіл не буде використовуватись доки ви явно не ініціюєте перенесення даних на новий пристрій.";
