--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Un message envoyé à modifier ? Il n’est pas trop tard : touchez deux fois la bulle du message et le tour est joué. Qui a dit que corriger des coquilles devait être plus compliqué qu’un like ?
