--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Abbiamo anche aggiunto una scorciatoia per modificare i messaggi inviati. Tocca due volte sul messaggio e come per magia potrai modificare il passato.
