--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Chúng tôi đã thêm một thao tác nhanh để bạn có thể sửa tin nhắn đã gửi bằng các nhấn hai lần vào bong bóng tin nhắn.
