--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Přidali jsme rychlou volbu pro úpravu odeslaných zpráv dvojitým klepnutím na bublinu zprávy. Dvojitým klepnutím tak můžete nejen lajkovat, ale i opravit překlepy.
