--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Vi har tilføjet en genvej til at redigere sendte beskeder ved at dobbelttrykke på beskedboblen. Dobbelttryk er ikke kun til likes, medmindre du virkelig kan lide at redigere skrivefejl.
