--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Wir haben einen Shortcut zum Bearbeiten gesendeter Nachrichten hinzugefügt. Tippe dazu zweimal auf die Nachrichtenblase.
