--- a/fastlane/metadata/el/release_notes.txt
+++ b/fastlane/metadata/el/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Προσθέσαμε μια συντόμευση για την επεξεργασία των απεσταλμένων μηνυμάτων με διπλό πάτημα στα μηνύματα.
