--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• הוספנו קיצור דרך לעריכת הודעות שנשלחו באמצעות לחיצה כפולה על בועת ההודעה.
