--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Hozzáadtunk egy parancsikont, amellyel szerkeszthetők az elküldött üzenetek, ha duplán rákoppintasz az üzenetbuborékra.
