--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Mesaj balonuna çift dokunarak gönderilen mesajları düzenlemek için bir kısayol ekledik. Ayrıca çift dokunuşlar sadece beğenmeler için değildir.
