--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• We added a shortcut to edit sent messages by double tapping on the message bubble. Double taps aren't just for likes, unless you really like editing typos.
+• Тепер редагувати стало простіше: треба лише двічі торкнутися надісланого повідомлення. Подвійний дотик — це не тільки вподобайка. Хіба що вам дуже подобається виправляти хибодруки.
